--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
 
-<form id="dog-form">
-    <select id="dog-select"></select>
-    <button id="dog-button">OK</button>
-</form>
-<img src="" id="dog-img">
+<div class="container">
+    <form id="dog-form">
+        <select id="dog-select"></select>
+        <button id="dog-button">OK</button>
+    </form>
+    <img src="" id="dog-img">
+</div>
 </body>
 </html>
